--- a/configs/segclf_big.yaml
+++ b/configs/segclf_big.yaml
@@ -1,4 +1,4 @@
-output_dir: ${SCRATCH}/heptrkx/results/gnnsegclf_big_000
+output_dir: /global/cscratch1/sd/sfarrell/heptrkx/results/gnnsegclf_big_000
 
 trainer:
     name: gnn
@@ -7,7 +7,7 @@ trainer:
 
 data:
     name: hitgraphs
-    input_dir: ${SCRATCH}/heptrkx/data/hitgraphs_big_000
+    input_dir: /global/cscratch1/sd/xju/heptrkx/data/hitgraphs_big_000
     n_train: 16384
     n_valid: 1024
     batch_size: 2
