--- a/configs/nxgraph_default.yaml
+++ b/configs/nxgraph_default.yaml
@@ -1,16 +1,16 @@
-prod_name: nxgraph_small_sigmoid_001
-output_dir: trained_results
+prod_name: nxgraph_small_001
+output_dir: /global/homes/x/xju/track/gnn/code/gnn_networkx/trained_results
 data:
     name: hitgraphs
     input_dir: /global/cscratch1/sd/xju/heptrkx/data/hitgraphs_001
     section: 0
 
 model:
-    name: SegmentClassifier
+    name: default
 
 train:
-    log_name: run_nx_graph.log
-    time_lapse:  600  # how often save checkpoint in seconds
+    log_name: train_nx_graph.log
+    time_lapse:  60  # how often save checkpoint in seconds
     batch_size: 2
     iterations: 10000
     n_iters: 4
