--- a/configs/nxgraph_default.yaml
+++ b/configs/nxgraph_default.yaml
@@ -4,13 +4,14 @@ data:
     name: hitgraphs
     input_hitsgraph_dir: /global/cscratch1/sd/xju/heptrkx/data/hitgraphs_big_000
     output_nxgraph_dir:  /global/cscratch1/sd/xju/heptrkx/data/nxgraphs_big_000
+    log_name: data_process.log
 
 model:
     name: default
 
 train:
     log_name: big.log
-    time_lapse:  120 # how often save checkpoint in seconds
+    time_lapse:  60 # how often save checkpoint in seconds
     batch_size: 2
     iterations: 30000
     iter_per_job: 2000
