--- a/configs/nxgraph_test_pairs.yaml
+++ b/configs/nxgraph_test_pairs.yaml
@@ -1,9 +1,9 @@
-prod_name: nxgraph_pairs_100evts
+prod_name: nxgraph_pairs_10evts_001
 output_dir: /global/homes/x/xju/track/gnn/code/gnn_networkx/trained_results
 data:
     name: hitgraphs
     input_hitsgraph_dir: /global/cscratch1/sd/xju/heptrkx/data/
-    output_nxgraph_dir:  /global/cscratch1/sd/xju/heptrkx/data/graph_from_pairs_test_100
+    output_nxgraph_dir:  /global/cscratch1/sd/xju/heptrkx/data/graph_from_pairs_test_10
     log_name: data_process.log
 
 model:
