--- a/configs/pairs_to_nx.yaml
+++ b/configs/pairs_to_nx.yaml
@@ -1,6 +1,7 @@
 input_pairs: /global/homes/x/xju/track/gnn/code/top-quarks/trained/output_pairs_100
 input_track_events: /global/cscratch1/sd/xju/heptrkx/trackml_inputs/train_100_events
-output_graphs: /global/cscratch1/sd/xju/heptrkx/data/graph_from_pairs_test_2
+output_graphs: /global/homes/x/xju/project/xju/heptrkx/data/graph_from_pairs_test_100
 n_pairs_per_file: 10000
-n_workers: 2
+n_workers: 10
 start_jobID: 0
+ngraphs_per_job: 30
