--- a/configs/pairs_to_nx.yaml
+++ b/configs/pairs_to_nx.yaml
@@ -1,7 +1,8 @@
 input_pairs: /global/homes/x/xju/track/gnn/code/top-quarks/trained/output_pairs_100
-input_track_events: /global/cscratch1/sd/xju/heptrkx/trackml_inputs/train_100_events
-output_graphs: /global/homes/x/xju/project/xju/heptrkx/data/graph_from_pairs_test_100evts_20k
-n_pairs_per_file: 20000
-n_workers: 100
+input_track_events: /global/homes/x/xju/atlas/heptrkx/trackml_inputs/train_100_events
+output_graphs: /global/homes/x/xju/atlas/heptrkx/data/graphs_from_pairs_phi4_eta6
+n_workers: 32
 start_jobID: 0
-ngraphs_per_job: -1
+n_phi_sections: 4
+n_eta_sections: 6    # for reference, don't change
+eta_edges: [-5, -0.75, -0.35, 0, 0.35, 0.75, 5] # for reference, don't change
