--- a/configs/nxgraph_digraph.yaml
+++ b/configs/nxgraph_digraph.yaml
@@ -1,21 +1,22 @@
-prod_name: nxgraph_big_007
+prod_name: nxgraph_digraph_004
 output_dir: /global/homes/x/xju/track/gnn/code/gnn_networkx/trained_results
 data:
     name: hitgraphs
-    input_hitsgraph_dir: /global/homes/x/xju/atlas/heptrkx/data/hitgraphs_big_000
-    output_nxgraph_dir:  /global/cscratch1/sd/xju/heptrkx/data/nxgraphs_big_000
+    input_hitsgraph_dir: /global/cscratch1/sd/xju/heptrkx/data/hitgraphs_big_000
+    output_nxgraph_dir:  /global/cscratch1/sd/xju/heptrkx/data/nxgraphs_big_001
     log_name: data_process.log
 
 model:
-    name: default
+    name: MORE
 
 train:
     log_name: big.log
-    time_lapse:  120 # how often save checkpoint in seconds
+    time_lapse:  60 # how often save checkpoint in seconds
     batch_size: 2
-    iterations: 180000
+    iterations: 100000
     iter_per_job: 20000
     n_iters: 8
     learning_rate: 0.001
     real_weight: 1.0
     fake_weight: 0.5
+
