--- a/configs/pairs_to_nx.yaml
+++ b/configs/pairs_to_nx.yaml
@@ -1,5 +1,6 @@
 input_pairs: /global/homes/x/xju/track/gnn/code/top-quarks/trained/output_pairs_100
 input_track_events: /global/homes/x/xju/atlas/heptrkx/trackml_inputs/train_100_events
+input_blacklist: /global/homes/x/xju/atlas/heptrkx/trackml_inputs/blacklist
 output_graphs: /global/homes/x/xju/atlas/heptrkx/data/graphs_from_pairs_phi4_eta6
 n_workers: 100
 start_jobID: 0
