--- a/configs/data.yaml
+++ b/configs/data.yaml
@@ -8,8 +8,8 @@ true_hits:
 
 doublets_for_training:
     base_dir: /global/cscratch1/sd/xju/heptrkx/pairs
-    true_pairs: merged_true_pairs/training # relative to base_dir
-    all_pairs: all_pairs_moreVars          # relative to base_dir
+    true_pairs: merged_true_pairs # relative to base_dir
+    all_pairs: all_pairs_moreVars # relative to base_dir
 
 
 doublet_training:
