--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,10 @@ logs
 trained_results
 notebooks
 images
+
+# setuptools distribution folder
+/dist/
+
+# python egg metadata, regenerated from source files by setuptools
+/*.egg-info
+/*.egg
