--- a/configs/train_doublet_only_cluster.yaml
+++ b/configs/train_doublet_only_cluster.yaml
@@ -9,6 +9,9 @@ doublet_training:
     batch_size: 512
     epochs: 6
     eff_cut: 0.98
-    model_output_dir: /global/cscratch1/sd/xju/heptrkx/codalab/outputs/doublet_NN_all
+    model_output_dir: /global/cscratch1/sd/xju/heptrkx/codalab/outputs/doublet_NN_onlyCluster
     features: ['lx_in', 'lx_out', 'ly_in', 'ly_out', 'lz_in', 'lz_out']
     bkg_from_evtid: 21000
+
+doublets_for_graph:
+    selected: /global/cscratch1/sd/xju/heptrkx/codalab/outputs/seed_studies/cluster_features
