--- a/environment.yml
+++ b/environment.yml
@@ -1,179 +1,123 @@
-name: py3.6
+name: heptrk
 channels:
-  - pytorch
-  - plotly
+  - conda-forge
   - defaults
 dependencies:
-  - _tflow_select=2.1.0=gpu
-  - absl-py=0.6.1=py36_0
-  - asn1crypto=0.24.0=py36_0
-  - astor=0.7.1=py36_0
-  - backcall=0.1.0=py36_0
-  - beautifulsoup4=4.6.0=py36h49b8c8c_1
+  - attrs=19.1.0=py_0
+  - backcall=0.1.0=py_0
   - blas=1.0=mkl
-  - bleach=2.1.3=py36_0
-  - blosc=1.14.4=hdbcaa40_0
-  - bzip2=1.0.6=h14c3975_5
-  - c-ares=1.15.0=h7b6447c_1
-  - ca-certificates=2019.1.23=0
-  - certifi=2018.11.29=py36_0
-  - cffi=1.11.5=py36h9745a5d_0
-  - cryptography=2.5=py36h1ba5d50_0
-  - cudatoolkit=9.0=h13b8566_0
-  - cudnn=7.3.1=cuda9.0_0
-  - cupti=9.0.176=0
-  - cycler=0.10.0=py36_0
-  - cython=0.28.2=py36h14c3975_0
-  - dbus=1.13.2=h714fa37_1
-  - decorator=4.3.0=py36_0
-  - entrypoints=0.2.3=py36h1aec115_2
-  - expat=2.2.6=he6710b0_0
-  - fontconfig=2.13.0=h9420a91_0
-  - freetype=2.9.1=h8a8886c_1
-  - gast=0.2.1=py36_0
-  - glib=2.56.2=hd408876_0
-  - gmp=6.1.2=h6c8ec71_1
-  - grpcio=1.16.1=py36hf8bcb03_1
-  - gst-plugins-base=1.14.0=hbbd80ab_1
-  - gstreamer=1.14.0=hb453b48_1
-  - h5py=2.8.0=py36h989c5e5_3
-  - hdf5=1.10.2=hba1933b_1
-  - html5lib=1.0.1=py36h2f9c1c0_0
-  - icu=58.2=h9c2bf20_1
-  - intel-openmp=2018.0.0=8
-  - ipykernel=4.8.2=py36_0
-  - ipython=6.4.0=py36_0
-  - ipython_genutils=0.2.0=py36hb52b0d5_0
-  - ipywidgets=7.2.1=py36_0
-  - jedi=0.12.0=py36_1
-  - jinja2=2.10=py36ha16c418_0
-  - jpeg=9b=h024ee3a_2
-  - jsonschema=2.6.0=py36h006f8b5_0
-  - jupyter=1.0.0=py36_7
-  - jupyter_client=5.2.3=py36_0
-  - jupyter_console=5.2.0=py36he59e554_1
-  - jupyter_core=4.4.0=py36h7c827e3_0
-  - keras-applications=1.0.6=py36_0
-  - keras-preprocessing=1.0.5=py36_0
-  - kiwisolver=1.0.1=py36hf484d3e_0
-  - libedit=3.1.20170329=h6b74fdf_2
+  - bleach=3.1.0=py_0
+  - ca-certificates=2019.9.11=hecc5488_0
+  - certifi=2019.9.11=py36_0
+  - decorator=4.4.0=py_0
+  - defusedxml=0.5.0=py_1
+  - entrypoints=0.3=py36_1000
+  - intel-openmp=2019.4=243
+  - ipykernel=5.1.1=py36h24bf2e0_0
+  - ipython=7.5.0=py36h24bf2e0_0
+  - ipython_genutils=0.2.0=py_1
+  - jedi=0.13.3=py36_0
+  - jinja2=2.10.1=py_0
+  - jsonschema=3.0.1=py36_0
+  - jupyter_client=5.2.4=py_3
+  - jupyter_core=4.4.0=py_0
+  - jupyterlab=0.35.6=py36_0
+  - jupyterlab_server=0.2.0=py_0
+  - libedit=3.1.20181209=hc058e9b_0
   - libffi=3.2.1=hd88cf55_4
-  - libgcc=7.2.0=h69d50b8_2
   - libgcc-ng=8.2.0=hdf63c60_1
-  - libgfortran-ng=7.2.0=hdf63c60_3
-  - libpng=1.6.35=hbc83047_0
-  - libprotobuf=3.6.1=hd408876_0
-  - libsodium=1.0.16=h1bed415_0
+  - libgfortran-ng=7.3.0=hdf63c60_0
+  - libsodium=1.0.16=h14c3975_1001
   - libstdcxx-ng=8.2.0=hdf63c60_1
-  - libtiff=4.0.9=he85c1e1_1
-  - libuuid=1.0.3=h1bed415_2
-  - libxcb=1.13=h1bed415_1
-  - libxml2=2.9.8=hf84eae3_0
-  - libxslt=1.1.32=h1312cb7_0
-  - lzo=2.10=h49e0be7_2
-  - markdown=3.0.1=py36_0
-  - markupsafe=1.0=py36hd9260cd_1
-  - matplotlib=3.0.2=py36h5429711_0
-  - mistune=0.8.3=py36h14c3975_1
-  - mkl=2018.0.2=1
-  - mkl_fft=1.0.1=py36h3010b51_0
-  - mkl_random=1.0.1=py36h629b387_0
-  - nbconvert=5.3.1=py36hb41ffb7_0
-  - nbformat=4.4.0=py36h31c9010_0
-  - ncurses=6.1=hf484d3e_0
-  - ninja=1.8.2=py36h6bb024c_1
-  - notebook=5.5.0=py36_0
-  - numexpr=2.6.5=py36h7bf3b9c_0
-  - numpy=1.14.3=py36hcd700cb_1
-  - numpy-base=1.14.3=py36h9be14a7_1
-  - olefile=0.45.1=py36_0
-  - openssl=1.1.1b=h7b6447c_0
-  - pandoc=1.19.2.1=hea2e7c5_1
-  - pandocfilters=1.4.2=py36ha6701b7_1
-  - parso=0.2.0=py36_0
-  - patsy=0.5.0=py36_0
-  - pcre=8.42=h439df22_0
-  - pexpect=4.5.0=py36_0
-  - pickleshare=0.7.4=py36h63277f8_0
-  - pillow=5.3.0=py36h34e0f95_0
-  - plotly=3.6.1=py36_0
-  - plotly-orca=1.2.1=1
-  - prompt_toolkit=1.0.15=py36h17d85b1_0
-  - protobuf=3.6.1=py36he6710b0_0
-  - psutil=5.5.0=py36h7b6447c_0
-  - ptyprocess=0.5.2=py36h69acd42_0
-  - pycparser=2.18=py36hf9f622e_1
-  - pygments=2.2.0=py36h0d3125c_0
-  - pyopenssl=19.0.0=py36_0
-  - pyparsing=2.3.1=py36_0
-  - pyqt=5.9.2=py36h05f1152_2
-  - pysocks=1.6.8=py36_0
-  - pytables=3.4.4=py36ha205bf6_0
-  - python=3.6.7=h0371630_0
-  - python-dateutil=2.8.0=py36_0
-  - pytorch=1.0.1=py3.6_cuda9.0.176_cudnn7.4.2_2
-  - pyzmq=17.0.0=py36h14c3975_0
-  - qt=5.9.7=h5867ecd_1
-  - qtconsole=4.3.1=py36h8f73b5b_0
-  - readline=7.0=ha6073c6_4
-  - retrying=1.3.3=py36_2
-  - scikit-learn=0.19.1=py36h7aa7ec6_0
-  - scipy=1.1.0=py36hfc37229_0
-  - seaborn=0.8.1=py36hfad7ec4_0
-  - send2trash=1.5.0=py36_0
-  - setuptools=40.8.0=py36_0
-  - simplegeneric=0.8.1=py36_2
-  - sip=4.19.8=py36hf484d3e_0
-  - six=1.12.0=py36_0
-  - snappy=1.1.7=hbae5bb6_3
-  - sqlite=3.25.3=h7b6447c_0
-  - statsmodels=0.9.0=py36h3010b51_0
-  - tensorboard=1.12.2=py36he6710b0_0
-  - tensorflow=1.12.0=gpu_py36he68c306_0
-  - tensorflow-base=1.12.0=gpu_py36h8e0ae2d_0
-  - tensorflow-gpu=1.12.0=h0d30ee6_0
-  - termcolor=1.1.0=py36_1
-  - terminado=0.8.1=py36_1
-  - testpath=0.3.1=py36h8cadb63_0
+  - markupsafe=1.1.1=py36h14c3975_0
+  - mistune=0.8.4=py36h14c3975_1000
+  - mkl=2019.4=243
+  - mkl-service=2.3.0=py36he904b0f_0
+  - mkl_fft=1.0.14=py36ha843d7b_0
+  - mkl_random=1.1.0=py36hd6b4f25_0
+  - nbconvert=5.5.0=py_0
+  - nbformat=4.4.0=py_1
+  - ncurses=6.1=he6710b0_1
+  - networkx=2.3=py_0
+  - notebook=5.7.8=py36_1
+  - numpy-base=1.17.2=py36hde5b4d6_0
+  - openssl=1.1.1c=h516909a_0
+  - pandoc=2.7.2=0
+  - pandocfilters=1.4.2=py_1
+  - parso=0.4.0=py_0
+  - pexpect=4.7.0=py36_0
+  - pickleshare=0.7.5=py36_1000
+  - pip=19.1.1=py36_0
+  - prometheus_client=0.6.0=py_0
+  - prompt_toolkit=2.0.9=py_0
+  - ptyprocess=0.6.0=py_1001
+  - pygments=2.4.2=py_0
+  - pyrsistent=0.15.2=py36h516909a_0
+  - python=3.6.8=h0371630_0
+  - python-dateutil=2.8.0=py_0
+  - pyzmq=18.0.1=py36hc4ba49a_1
+  - readline=7.0=h7b6447c_5
+  - send2trash=1.5.0=py_0
+  - setuptools=41.0.1=py36_0
+  - sqlite=3.28.0=h7b6447c_0
+  - terminado=0.8.2=py36_0
+  - testpath=0.4.2=py_1001
   - tk=8.6.8=hbc83047_0
-  - torchvision=0.2.1=py_2
-  - tornado=5.1.1=py36h7b6447c_0
-  - tqdm=4.23.4=py36_0
-  - traitlets=4.3.2=py36h674d592_0
-  - wcwidth=0.1.7=py36hdf4376a_0
-  - webencodings=0.5.1=py36h800622e_1
-  - werkzeug=0.14.1=py36_0
-  - wheel=0.33.1=py36_0
-  - widgetsnbextension=3.2.1=py36_0
+  - tornado=6.0.2=py36h516909a_0
+  - tqdm=4.32.1=py_0
+  - traitlets=4.3.2=py36_1000
+  - wcwidth=0.1.7=py_1
+  - webencodings=0.5.1=py_1
+  - wheel=0.33.4=py36_0
   - xz=5.2.4=h14c3975_4
-  - zeromq=4.2.5=h439df22_0
-  - zlib=1.2.11=ha838bed_2
+  - zeromq=4.3.1=hf484d3e_1000
+  - zlib=1.2.11=h7b6447c_3
   - pip:
-    - chardet==3.0.4
-    - contextlib2==0.5.5
-    - dm-sonnet==1.23
-    - future==0.16.0
-    - graph-nets==1.0.2
-    - gym==0.10.5
-    - idna==2.6
-    - jupyter-contrib-core==0.3.3
-    - jupyter-contrib-nbextensions==0.5.0
-    - jupyter-highlight-selected-word==0.2.0
-    - jupyter-latex-envs==1.4.4
-    - jupyter-nbextensions-configurator==0.4.0
-    - lxml==4.2.1
-    - networkx==2.2
-    - pandas==0.23.0
-    - pip==18.0
-    - pyglet==1.3.2
-    - pytz==2018.4
-    - pyyaml==3.12
-    - requests==2.18.4
-    - semantic-version==2.6.0
-    - tensorflow-probability==0.5.0
-    - trackml==2
-    - urllib3==1.22
-    - wrapt==1.11.1
-    - xgboost==0.71
-prefix: /global/project/projectdirs/atlas/xju/miniconda3/envs/py3.6
+    - absl-py==0.7.1
+    - astor==0.8.0
+    - cloudpickle==1.1.1
+    - colorama==0.4.1
+    - contextlib2==0.6.0
+    - cycler==0.10.0
+    - dm-sonnet==1.35
+    - future==0.17.1
+    - gast==0.2.2
+    - google-pasta==0.1.7
+    - graph-nets==1.0.5.dev0
+    - grpcio==1.21.1
+    - h5py==2.8.0
+    - joblib==0.13.2
+    - keras-applications==1.0.8
+    - keras-preprocessing==1.1.0
+    - kiwisolver==1.1.0
+    - llvmlite==0.29.0
+    - markdown==3.1.1
+    - matplotlib==3.1.0
+    - mock==3.0.5
+    - mpi4py==3.0.0
+    - numba==0.44.0
+    - numexpr==2.6.9
+    - numpy==1.16.4
+    - pandas==0.24.2
+    - pillow==6.0.0
+    - protobuf==3.8.0
+    - pyparsing==2.4.0
+    - pytz==2019.1
+    - pyyaml==5.1
+    - scikit-learn==0.21.2
+    - scipy==1.3.0
+    - semantic-version==2.8.2
+    - six==1.12.0
+    - sklearn==0.0
+    - tables==3.4.4
+    - tensorboard==1.14.0
+    - tensorflow-estimator==1.14.0
+    - tensorflow-gpu==1.14.0
+    - tensorflow-probability==0.8.0
+    - termcolor==1.1.0
+    - torch==1.0.1
+    - torchvision==0.2.1
+    - werkzeug==0.15.4
+    - wrapt==1.11.2
+prefix: /global/homes/x/xju/.conda/envs/heptrk
 
