--- a/configs/data_NN_segments.yaml
+++ b/configs/data_NN_segments.yaml
@@ -28,6 +28,7 @@ gnn_training:
         - /global/cscratch1/sd/xju/heptrkx/codalab/inputs/trimed_doublets/doublets-evt22021-100events.h5
     n_eta: 2
     n_phi: 12
+    tfrec_name: 'doublets_24regions_111evts'
     # node_features: ['x', 'y', 'z', 'geta', 'gphi', 'eta', 'phi', 'r', 'r3']
     # edge_features: ['deta', 'dphi', 'dr', 'dz', 'phi_slope', 'deta1', 'dphi1', 'z0']
     node_features: ['r', 'phi', 'z', 'geta', 'eta']
