--- a/configs/config_tpu.yaml
+++ b/configs/config_tpu.yaml
@@ -20,8 +20,8 @@ doublet_training:
 gnn_training:
     n_eta: 2
     n_phi: 12
-    # tfrec_name: 'doublets_24regions_111evts'
-    tfrec_name: 'test.tfrecord'
+    tfrec_name: 'doublets_24regions_111evts'
+    # tfrec_name: 'test.tfrecord'
     tfrec_dir: 'gs://gnn-v1'
     # node_features: ['x', 'y', 'z', 'geta', 'gphi', 'eta', 'phi', 'r', 'r3']
     # edge_features: ['deta', 'dphi', 'dr', 'dz', 'phi_slope', 'deta1', 'dphi1', 'z0']
@@ -36,11 +36,11 @@ gnn_training:
     input_type: 'data_dict'
     parameters:
         time_lapse:  60 # how often save checkpoint in seconds
-        batch_size: 1
+        batch_size: 4
         iterations: 200000
         iter_per_job: 200000
         n_iters: 8
         learning_rate: 0.0001
         real_weight: 10.0
         fake_weight: 1.
-        epochs: 1
+        epochs: 2
