--- a/configs/config_24regions.yaml
+++ b/configs/config_24regions.yaml
@@ -28,7 +28,7 @@ gnn_training:
         - /global/cscratch1/sd/xju/heptrkx/codalab/inputs/trimed_doublets/doublets-evt22021-100events.h5
     n_eta: 2
     n_phi: 12
-    tfrec_name: 'doublets_24regions_110evts_noPadding_0.tfrec'
+    tfrec_name: 'doublets_24regions_110evts_noPadding_*.tfrec'
     tfrec_dir_cloud: 'gs://gnn-v1/one_evt_24regions_padding'
     tfrec_dir_local: /global/cfs/cdirs/m3443/usr/xju/heptrkx/codalab/tfdata_doublets/one_evt_24regions_padding
     # node_features: ['x', 'y', 'z', 'geta', 'gphi', 'eta', 'phi', 'r', 'r3']
