--- a/heptrkx/configs/google_ai_config.yaml
+++ b/heptrkx/configs/google_ai_config.yaml
@@ -1,13 +1,10 @@
 trainingInput:
     scaleTier: CUSTOM
-    masterType: n1-highcpu-16
-    masterConfig:
-        imageUri: gcr.io/myproject
+    masterType: n1-highmem-2
     workerType: cloud_tpu
     workerCount: 1 
     workerConfig:
-        imageUri: gcr.io/myproject
-        tpuTfVersion: 2.2
+        tpuTfVersion: "2.1"
         acceleratorConfig:
             type: TPU_V2
-            count: 32
+            count: 8
