made the hovorod work

--- a/heptrkx/configs/config_embeded_doublets.yaml
+++ b/heptrkx/configs/config_embeded_doublets.yaml
@@ -41,7 +41,7 @@ gnn_training:
     input_type: 'data_dict'
     parameters:
         time_lapse:  600 # how often save checkpoint in seconds
-        batch_size: 
+        batch_size: 1
         iterations: 200000
         iter_per_job: 200000
         n_iters: 8
